--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-project-amanda-dana-cat-alexis",
   "version": "0.1.0",
+  "homepage": "https://amandacarbone.github.io/react-project-amanda-dana-cat-alexis",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -24,6 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
